# llm-parser-filter

./: .gitignore  README.llm.md  README.md  Text_conv_utils.md  pyproject.toml
.cursor/rules/: always-describe-yourself-first.mdc  uv.mdc
llm_parser_filter/: __init__.py  core.py  text_conversion.py
tests/: conftest.py  test_llm_parser_filter.py  test_text_conversion.py
